# CMakeList.txt : CMake project for dsa, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SpiralOrder")
# Add source to this project's executable.
add_executable (SpiralOrder "SpiralOrder.cpp" "SpiralOrder.h")

# TODO: Add tests and install targets if needed.
